Added the correct information into the Project area

--- a/index.html
+++ b/index.html
@@ -183,26 +183,22 @@
 
               <!--Content-->
               <div id="covers" class="tabcontent2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis egestas integer eget aliquet nibh. At lectus urna duis convallis convallis tellus id interdum velit. 
-                    Volutpat maecenas volutpat blandit aliquam etiam. Neque volutpat ac tincidunt vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Congue mauris rhoncus aenean vel elit. Curabitur vitae nunc sed velit 
-                    dignissim sodales ut eu sem. Rutrum quisque non tellus orci ac. Nec feugiat in fermentum posuere urna. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Vulputate eu scelerisque felis imperdiet proin fermentum leo.
-                    Quis commodo odio aenean sed. Cursus in hac habitasse platea dictumst. Duis at tellus at urna condimentum mattis pellentesque id. In est ante in nibh mauris cursus mattis molestie.
+                <p class="p-10">Used Figma to understand the different frames and componants used in design to create comprehensive looking
+                  elements. This is a project I did for fun to make custom spotify playlist covers. 
                 </p>
               </div>
 
               <div id="mPlayer" class="tabcontent2">
-                <p class="text-blue-200">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis egestas integer eget aliquet nibh. At lectus urna duis convallis convallis tellus id interdum velit. 
-                    Volutpat maecenas volutpat blandit aliquam etiam. Neque volutpat ac tincidunt vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Congue mauris rhoncus aenean vel elit. Curabitur vitae nunc sed velit 
-                    dignissim sodales ut eu sem. Rutrum quisque non tellus orci ac. Nec feugiat in fermentum posuere urna. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Vulputate eu scelerisque felis imperdiet proin fermentum leo.
-                    Quis commodo odio aenean sed. Cursus in hac habitasse platea dictumst. Duis at tellus at urna condimentum mattis pellentesque id. In est ante in nibh mauris cursus mattis molestie.
+                <p class="p-10">I used figma and thier prototyping feature to design a rough mock up
+                  of a music streaming service. I mainly did this to test out animations and UI design.
                 </p>
               </div>
 
                 <div id="portfolio" class="tabcontent2">
-                  <p class="text-yellow-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis egestas integer eget aliquet nibh. At lectus urna duis convallis convallis tellus id interdum velit. 
-                      Volutpat maecenas volutpat blandit aliquam etiam. Neque volutpat ac tincidunt vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Congue mauris rhoncus aenean vel elit. Curabitur vitae nunc sed velit 
-                      dignissim sodales ut eu sem. Rutrum quisque non tellus orci ac. Nec feugiat in fermentum posuere urna. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Vulputate eu scelerisque felis imperdiet proin fermentum leo.
-                      Quis commodo odio aenean sed. Cursus in hac habitasse platea dictumst. Duis at tellus at urna condimentum mattis pellentesque id. In est ante in nibh mauris cursus mattis molestie.
+                  <p class="p-10">I used figma to design the portfolio you are currently on. 
+                    I decided to design the mobile version first because it is easier to scale up to a desktop view.
+                    Going from my figma design into the website view, there are some drastic changes because this was mainly 
+                    a framework of how I wanted it to look like roughly.
                   </p>
                 </div>
 
@@ -234,7 +230,7 @@
                 <div class="tabs2">
                   <button class="tablinks2" onclick="projectSec(event, 'postogonSet')">
                     <div class="hover:text-green-300">
-                      <img class="rounded-full mx-auto" src="images/Settings.jpeg" alt="Settings page" width="150">
+                      <img class="rounded-full border border-black mx-auto" src="images/Settings.jpeg" alt="Settings page" width="150">
                       <p class="pt-2 text-lg">Postogon Settings Page</p>
                     </div>
                   </button>
@@ -243,26 +239,32 @@
 
               <!--Content-->
               <div id="conway" class="tabcontent2">
-                <p class="text-teal-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis egestas integer eget aliquet nibh. At lectus urna duis convallis convallis tellus id interdum velit. 
-                    Volutpat maecenas volutpat blandit aliquam etiam. Neque volutpat ac tincidunt vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Congue mauris rhoncus aenean vel elit. Curabitur vitae nunc sed velit 
-                    dignissim sodales ut eu sem. Rutrum quisque non tellus orci ac. Nec feugiat in fermentum posuere urna. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Vulputate eu scelerisque felis imperdiet proin fermentum leo.
-                    Quis commodo odio aenean sed. Cursus in hac habitasse platea dictumst. Duis at tellus at urna condimentum mattis pellentesque id. In est ante in nibh mauris cursus mattis molestie.
+                <p class="p-10">
+                  <b class="text-red-600">Work In Progress</b>
+                </p>
+                <p>
+                  I'm using Conway's Game of Life to teach me how to use Python in a more applicable sense.
+                  I'm not done with the development of the game because there is a part I'm stuck on that I am actively 
+                  trying to solve.
                 </p>
               </div>
 
               <div id="discordBot" class="tabcontent2">
-                <p class="text-red-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis egestas integer eget aliquet nibh. At lectus urna duis convallis convallis tellus id interdum velit. 
-                    Volutpat maecenas volutpat blandit aliquam etiam. Neque volutpat ac tincidunt vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Congue mauris rhoncus aenean vel elit. Curabitur vitae nunc sed velit 
-                    dignissim sodales ut eu sem. Rutrum quisque non tellus orci ac. Nec feugiat in fermentum posuere urna. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Vulputate eu scelerisque felis imperdiet proin fermentum leo.
-                    Quis commodo odio aenean sed. Cursus in hac habitasse platea dictumst. Duis at tellus at urna condimentum mattis pellentesque id. In est ante in nibh mauris cursus mattis molestie.
+                <p class="p-10">
+                  <b class="text-red-600">Work In Progress</b>
+                </p>
+                <p>
+                  I am a part of a club at Wayne State called Society for Computer Developers.
+                  We are working on is a Discord Bot that does some basic commands. I was able to learn a bit of javascript
+                  and understand how to read json files. I haven't finished development of it yet.
                 </p>
               </div> 
 
               <div id="postogonSet" class="tabcontent2">
-                <p class="text-cyan-200">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis egestas integer eget aliquet nibh. At lectus urna duis convallis convallis tellus id interdum velit. 
-                    Volutpat maecenas volutpat blandit aliquam etiam. Neque volutpat ac tincidunt vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Congue mauris rhoncus aenean vel elit. Curabitur vitae nunc sed velit 
-                    dignissim sodales ut eu sem. Rutrum quisque non tellus orci ac. Nec feugiat in fermentum posuere urna. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Vulputate eu scelerisque felis imperdiet proin fermentum leo.
-                    Quis commodo odio aenean sed. Cursus in hac habitasse platea dictumst. Duis at tellus at urna condimentum mattis pellentesque id. In est ante in nibh mauris cursus mattis molestie.
+                <p class="p-10">
+                  I was helping my friend and his team build a social media website. What I was tasked on doing
+                  was developing the front end of the settings page. With help from him and some other team members 
+                  I was able to learn Tailwind CSS and PHP (for decoupling the front and back end).
                 </p>
               </div>
 
