Finshed designing website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg sm:rounded-bl-lg sm:rounded-br-lg">
+      <nav id="navbar" class="fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="flex items-center flex-shrink-0 text-green-600 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -33,7 +33,7 @@
             <a href="#experience" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Experience</a>
           </div>
           <div>
-            <a href="files/Oke-Oghene Amuwha Resume.pdf" target="_blank" class="inline-block text-sm px-4 py-2 leading-none border rounded text-green-600 border-green-600 hover:border-transparent hover:text-green-300 hover:bg-green-600 mt-4 lg:mt-0">Resume</a>
+            <a href="files/Oke-Oghene Amuwha Resume.pdf" target="_blank" class="inline-block text-sm px-4 py-2 leading-none border rounded text-green-600 border-green-600 hover:border-transparent hover:text-green-300 hover:bg-green-600 mt-4 md:mt-0">Resume</a>
           </div>
         </div>
       </nav>
@@ -45,9 +45,9 @@
         <!--Cover-->
         <img class="w-80 h-80 rounded-full mx-auto" src="images/Portrait.jpeg" alt="Profile Picture" width="500">
         <div class="mx-auto pb-20 text-white text-center">
-          <p class="text-5xl font-bold pt-10">Oke Amuwha</p>
-          <p class="mb-5 p-5">I'm really alive right now. Experiencing the universe as a human being</p>
-          <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="100"> <!--Logo-->
+          <p class="text-5xl font-bold pt-5">Oke-Oghene Amuwha</p>
+          <p class="text-lg px-10 my-5">Yesterday is history. Tomorrow is a mystery, but today is a gift, that’s why it’s called the present</p>
+          <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
         </div>
         <!--School-->
         <div id="school" class="bg-white rounded-tl-lg rounded-tr-lg py-20">
@@ -55,7 +55,7 @@
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
-            <p class="mb-10">Bachelor of Science in Computer Science</p>
+            <p class="mb-5">Bachelor of Science in Computer Science</p>
             <!--About me Tabs-->
             <!--Links-->
             <div class="tabs mb-10">
@@ -97,42 +97,42 @@
               <h1 id="skills" class="text-3xl font-bold">Skills</h1>
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                 <!--C++-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/C++.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">C++</p>
                 </div>
                 <!--HTML-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/HTML.svg" alt="HTML" width="80">
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <!--Python-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/Python.svg" alt="Python" width="80">
                   <p class="pt-2 text-lg">Python</p>
                 </div class="">
                 <!--Java-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/Java.svg" alt="Java" width="80">
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <!--Github-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/GitHub.svg" alt="Github" width="80">
                   <p class="pt-2 text-lg">Github</p>
-                </div class="">
+                </div class="mb-5">
                 <!--Figma-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/Figma.svg" alt="Figma" width="80">
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <!--Tailwind-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="Tailwind" width="80">
                   <p class="pt-2 text-lg">Tailwind</p>
                 </div>
                 <!--PHP-->
-                <div class="">
+                <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/PHP.svg" alt="React" width="80">
                   <p class="pt-2 text-lg">PHP</p>
                 </div>
@@ -141,9 +141,9 @@
 
             <!--Projects-->
             <div class="p-10 mb-10">
-              <h1 id="projects" class="text-3xl font-bold">Projects</h1>
+              <h1 id="projects" class="text-3xl font-bold mb-10">Projects</h1>
               <!--Projects in figma-->
-              <p class="p-4 text-2xl">Design</p>
+              <p class="p-5 text-2xl font-semibold">Figma</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <!---->
                 <!---->
@@ -182,20 +182,23 @@
               </div>
 
               <!--Content-->
-              <div id="covers" class="tabcontent">
-                <p class="p-10">Used Figma to understand the different frames and componants used in design to create comprehensive looking
+              <div id="covers" class="tabcontent p-10">
+                <img class="mx-auto pb-5" src="images/Playlist Covers.png" alt="Picture of Spotify playlist covers" width="200">
+                <p>Used Figma to understand the different frames and componants used in design to create comprehensive looking
                   elements. This is a project I did for fun to make custom spotify playlist covers. 
                 </p>
               </div>
 
-              <div id="mPlayer" class="tabcontent">
-                <p class="p-10">I used figma and thier prototyping feature to design a rough mock up
+              <div id="mPlayer" class="tabcontent p-10">
+                <img class="mx-auto pb-5" src="images/Music Player.png" alt="Music Player Mock up" width="200">
+                <p>I used figma and thier prototyping feature to design a rough mock up
                   of a music streaming service. I mainly did this to test out animations and UI design.
                 </p>
               </div>
 
-                <div id="portfolio" class="tabcontent">
-                  <p class="p-10">I used figma to design the portfolio you are currently on. 
+                <div id="portfolio" class="tabcontent p-10">
+                  <img class="mx-auto pb-5" src="images/Portfolio (mobile).png" alt="Website Portfolio Mobile Version" width="200">
+                  <p>I used figma to design the portfolio you are currently on. 
                     I decided to design the mobile version first because it is easier to scale up to a desktop view.
                     Going from my figma design into the website view, there are some drastic changes because this was mainly 
                     a framework of how I wanted it to look like roughly.
@@ -203,7 +206,7 @@
                 </div>
 
               <!--Projects in Code-->
-              <p class="p-4 text-2xl mt-5">Code</p>
+              <p class="p-5 text-2xl font-semibold mt-10">Code</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
 
                 <!--Game of life-->
@@ -230,7 +233,7 @@
                 <div class="tabs">
                   <button class="tablinks" onclick="aboutSec(event, 'postogonSet')">
                     <div class="hover:text-green-300">
-                      <img class="rounded-full border border-black mx-auto" src="images/Settings.jpeg" alt="Settings page" width="150">
+                      <img class="rounded-full border border-black mx-auto" src="images/Settings.png" alt="Settings page" width="150">
                       <p class="pt-2 text-lg">Postogon Settings Page</p>
                     </div>
                   </button>
@@ -238,8 +241,8 @@
               </div>
 
               <!--Content-->
-              <div id="conway" class="tabcontent">
-                <p class="p-10">
+              <div id="conway" class="tabcontent p-10">
+                <p>
                   <b class="text-red-600">Work In Progress</b>
                 </p>
                 <p>
@@ -249,8 +252,8 @@
                 </p>
               </div>
 
-              <div id="discordBot" class="tabcontent">
-                <p class="p-10">
+              <div id="discordBot" class="tabcontent p-10">
+                <p>
                   <b class="text-red-600">Work In Progress</b>
                 </p>
                 <p>
@@ -260,8 +263,9 @@
                 </p>
               </div> 
 
-              <div id="postogonSet" class="tabcontent">
-                <p class="p-10">
+              <div id="postogonSet" class="tabcontent p-10">
+                <img class="mx-auto pb-5" src="images/Settings (full).png" alt="Settings image" width="200">
+                <p>
                   I was helping my friend and his team build a social media website. What I was tasked on doing
                   was developing the front end of the settings page. With help from him and some other team members 
                   I was able to learn Tailwind CSS and PHP (for decoupling the front and back end).
@@ -348,7 +352,7 @@
         })
       })
     </script>
-    <!--Javascript About Tabs-->
+    <!--Javascript Tabs-->
     <script>
       function aboutSec(evt, tabType) {
         let i, tabcontent, tablinks;
