Minor changes and updates

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img class="w-80 h-80 rounded-full mx-auto" src="images/Portrait.jpeg" alt="Profile Picture" width="500">
         <div class="mx-auto pb-20 text-white text-center">
           <p class="text-5xl font-bold pt-5">Oke-Oghene Amuwha</p>
-          <p class="text-lg px-10 my-5">Yesterday is history. Tomorrow is a mystery, but today is a gift, that’s why it’s called the present</p>
+          <p class="text-lg px-10 my-5">Yesterday is history. Tomorrow is a mystery, but today is a gift, that's why it's called the present</p>
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
         </div>
         <!--School-->
@@ -89,7 +89,7 @@
                 Sometimes in the midst of that excitement I end up taking a lot longer to finish the project or focusing on something else
                 something else that catches my interests. I also like watching educational youtubers like Veritasium or Vsauce
                 The way they're able to explain advanced concepts in an interactive and relatable way reinforces my love for learning.
-                I'm also pretty active, constantly working out my body and mind by going to the gym and <b>(attempting)</b> reading.
+                I'm also pretty active, constantly working out my body and mind by going to the gym and reading.
               </p>
             </div>
             <!--Skills-->
@@ -129,7 +129,7 @@
                 <!--Tailwind-->
                 <div class="mb-5">
                   <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="Tailwind" width="80">
-                  <p class="pt-2 text-lg">Tailwind</p>
+                  <p class="pt-2 text-lg">Tailwindcss</p>
                 </div>
                 <!--PHP-->
                 <div class="mb-5">
